--- a/index.html
+++ b/index.html
@@ -3,5 +3,15 @@
 <tittle>Ace Company</tittle>
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
-<body> <div>     <h2>We are under construction</h2> </div> </body>
+<body> 
+       <div>
+     	    <h2>We are under construction</h2>
+       	  <div>
+	    <form>
+		<p><input name="" value="Digite seu e-mail" type="text" />
+		<input type="button" value="Submit"></p>
+	    </form>
+          </div>
+       </div>
+ </body>
 </html>
